alignment fix attempt

--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -35,6 +35,7 @@ section.banner .banner-content h1 {
 section.grid-test .contents {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    justify-content: center;
 }
 
 section.grid-test .contents  img {
